--- a/Steckbrief/Auafgabe1.htm
+++ b/Steckbrief/Auafgabe1.htm
@@ -7,27 +7,36 @@
     <title>Galerie</title>
 </head>
 <body>
-    <h1>Bilder</h1>
+    <header>
+        <h1> GALERIE </h1>
+    </header>
+    <h2>Bilder</h2>
         <a href="Foto1_big.htm">
             <img src="foto1.jpg" target="blank"> 
         </a>
         <img src="foto2.jpg" target="blank"> 
         <img src="foto3.jpg" target="blank"> 
         <img src="foto4.jpg" target="blank"> 
-    <br>
-    <h1>Videos</h1>
-        <video src="clip1.mp4"></video>
-        <video src="clip2.mp4"></video>
-        <video src="clip3.mp4"></video>
-        <video src="clip4.mp4"></video>
-    <br>
-    <h1>Grafiken</h1>
+<br>
+    <h2>Videos</h2>
+        <video width="800px" controls>
+            <source src="clip1.mp4"></video>
+
+        <video width="800px" controls>
+            <source src="clip2.mp4"></video>
+
+        <video width="800px" controls>   
+            <source src="clip3.mp4"></video>
+
+        <video width="800px" controls>
+            <source src="clip4.mp4"></video>
+<br>
+    <h2>Grafiken</h2>
         <img src="grafik1.jpg" target="blank">
         <img src="grafik2.jpg" target="blank">
         <img src="grafik3.jpg" target="blank">
         <img src="grafik4.jpg" target="blank">
 </body>
-</html>doctype <html>
 
 
 </html>
