--- a/Aufgaben/Steckbrief/steckbrief.htm
+++ b/Aufgaben/Steckbrief/steckbrief.htm
@@ -14,6 +14,6 @@ body {
 <body>
 	<a href="#">Link zu Aufgabe 2</a>
 	<br>
-	<a href="#">Link zu Aufgabe 1</a>
+	<a href="../Aufgabe_1/Aufgabe1.htm">Link zu Aufgabe 1</a>
 </body>
 </html>
