--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="../Aufgabe_2/Portfolio.htm">Link zu Aufgabe 2</a>
 	<br>
 	<a href="../Aufgabe_1/Aufgabe1.htm">Link zu Aufgabe 1</a>
 </body>
