--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="../Aufgabe_4/Aufgabe4.htm">Link zu Aufgabe 4</a>
+	<a href="../Steckbrief/Aufgabe4.htm">Link zu Aufgabe 4</a>
 	<br>
 	<a href="../Aufgabe_3/Portfolio.htm">Link zu Aufgabe 3</a>
 	<br>
