--- a/Aufgabe_5/emission.htm
+++ b/Aufgabe_5/emission.htm
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="../Aufgabe_5/styles.css">
+    <script src="emission.js"></script>
 </head>
 <body>
     <nav>
