--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="../Aufgabe_6/emission.htm">Link zu Aufgabe 6</a>
+	<br>
 	<a href="../Aufgabe_5/emission.htm">Link zu Aufgabe 5</a>
 	<br>
 	<a href="../Aufgabe_4/Aufgabe4.htm">Link zu Aufgabe 4</a>
