--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<a href="../Aufgabe_7/drummachine.htm">Link zu Aufgabe 7</a>
+	<a href="../Aufgabe_7/flowchart.JPG">Flowchart</a>
 	<br>
 	<a href="../Aufgabe_6/emission.htm">Link zu Aufgabe 6</a>
 	<br>
