--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="../Aufgabe_8/drumpad_Aufgabe_8.htm">Link zu Aufgabe 7</a>
+	<br>
 	<a href="../Aufgabe_7/drummachine.htm">Link zu Aufgabe 7</a>
 	<a href="../Aufgabe_7/flowchart.JPG">Flowchart</a>
 	<br>
