--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="../Aufgabe_9/Todo.htm">Link zu Aufgabe 9</a><a href="../Aufgabe_9/Flowchart.JPG">Flowchart Aufgabe 9</a>
+	<br>
 	<a href="../Aufgabe_8/drumpad_Aufgabe_8.htm">Link zu Aufgabe 8</a>
 	<br>
 	<a href="../Aufgabe_7/drummachine.htm">Link zu Aufgabe 7</a>
